--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
     },
     "autoload": {
         "psr-4": {
-            "Lib\\": "lib/"
+            "Lib\\": "lib/",
+            "Controllers\\": "Controllers/",
+            "Models\\": "Models/"
         }
     }
 }
